--- a/package.json
+++ b/package.json
@@ -19,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/grig20051501/backend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/grig20051501/backend-project-lvl1#readme"
+  "homepage": "https://github.com/grig20051501/backend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6"
+  }
 }
